import org.gradle.internal.os.OperatingSystem

project.ext.targetPlatform = OperatingSystem.current()
switch (targetPlatform) {
	case OperatingSystem.WINDOWS:
		project.ext.lwjglNatives = "natives-windows"
		break
	case OperatingSystem.LINUX:
		project.ext.lwjglNatives = "natives-linux"
		break
	case OperatingSystem.MAC_OS:
		project.ext.lwjglNatives = "natives-macos"
		break
}

subprojects {

	apply plugin: 'java-library'

	version "1.0.7"

	sourceCompatibility = 14
	targetCompatibility = 14

	java {
		modularity.inferModulePath = true
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	afterEvaluate {
		repositories {
			jcenter()
			maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
			maven {
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = findProperty("github.username")
					password = findProperty("github.token")
				}
			}
		}
	}
}
